a few language tweaks under advisement, and fix layout issues

--- a/scss/base/_value-box.scss
+++ b/scss/base/_value-box.scss
@@ -22,6 +22,7 @@
 			border: none;
 			color: white;
 			background: linear-gradient(0.75turn, transparent, black);
+			text-shadow: 1px 1px black;
 		}
 	}
 
